# page-loader

./: .gitignore  Makefile  README.md  actions.yml  pyproject.toml
.github/workflows/: python-app.yml
.github/workflows/blank.yml/: actions.yml
docs/: index.html
docs/courses/: hexlet
page_loader/: app.py  cli.py  log.py  logging.py
page_loader/scripts/: page_loader.py
tests/: input_data.py  test_all.py  test_parametrize.py
tests/fixtures/: test.html
